--- a/ansible/inventories/prod.ini
+++ b/ansible/inventories/prod.ini
@@ -1,8 +1,8 @@
 [kafka]
-kafka ansible_host=<Kafka-IP> ansible_user=ec2-user ansible_ssh_private_key_file=~/.ssh/your-key.pem
+kafka ansible_host=35.153.83.53 ansible_user=ubuntu ansible_ssh_private_key_file=~/.ssh/web-app-key.pem
 
 [redis]
-redis ansible_host=<Redis-IP> ansible_user=ec2-user ansible_ssh_private_key_file=~/.ssh/your-key.pem
+redis ansible_host=54.157.153.196 ansible_user=ubuntu ansible_ssh_private_key_file=~/.ssh/web-app-key.pem
 
 [elasticsearch]
-elasticsearch ansible_host=<Elasticsearch-IP> ansible_user=ec2-user ansible_ssh_private_key_file=~/.ssh/your-key.pem
+elasticsearch ansible_host=54.237.98.22 ansible_user=ubuntu ansible_ssh_private_key_file=~/.ssh/web-app-key.pem
